Thu Aug 15 20:51:29 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c, internal.h (rb_io_flush_raw): new function to select calling
	  fsync() (on Windows).

	* io.c (rb_io_flush_raw): use above function.

	* file.c (rb_file_truncate): use above function.

	* test/ruby/test_file.rb (TestFile#test_truncate_size): test for
	  above changes.

Thu Aug 15 18:39:31 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (clock_gettime): improve precision when freq is less
	  than and nearly equals 10**9.

Thu Aug 15 17:43:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_lazy_sweep): remove heap_increment() here because heap_inc
	  may be 0.

Thu Aug 15 16:59:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_rewind): remove fsync() for Windows to improve the
	  performance.

Thu Aug 15 16:30:23 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_rmdir):
	  FileUtils.rmdir ignores Errno::ENOTEMPTY, so, in such cases, this
	  assertion is nonsence.

Thu Aug 15 15:49:35 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): [DOC] FreeBSD 7.1 supports
	  CLOCK_THREAD_CPUTIME_ID.
	  http://www.freebsd.org/releases/7.1R/relnotes.html

Thu Aug 15 14:30:23 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h, win32/Makefile.sub, win32/win32.c
	  (clock_gettime): [experimental] emulates clock_gettime(2) of posix.

Thu Aug 15 02:32:40 2013  Zachary Scott  <e@zzak.io>

	* hash.c (rb_hash_aset): [DOC] Document key dup patch by @kachick
	  [Fixes GH-382] https://github.com/ruby/ruby/pull/382

Wed Aug 14 14:28:39 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* proc.c (rb_mod_define_method): now they return the symbols of the
	  defined methods, not the methods/procs themselves.
	  [ruby-dev:42151] [Feature #3753]

	* NEWS: documents about above change and def-expr (see r42337).

	* test/ruby/test_module.rb: tests about above change.

Wed Aug 14 00:51:14 2013  Tanaka Akira  <akr@fsij.org>
